[package]
name = "personal-git"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = "1.0"
sha1 = "0.10.6"
sha2 = "0.10"
ignore = "0.4"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
